--- a/dashboards/digideps.erb
+++ b/dashboards/digideps.erb
@@ -1,13 +1,21 @@
 <% content_for :title do %>My super sweet dashboard<% end %>
 <div class="gridster">
   <ul>
-    <li data-row="1" data-col="1" data-sizex="2" data-sizey="2">
-       <div data-id="registrations_count" data-view="Number" data-title="New Registrations"></div>
+    <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
+       <div data-id="registrations_count" data-view="Number" data-title="New Users since 17 November"></div>
    </li>
 
-   <li data-row="1" data-col="2" data-sizex="2" data-sizey="2">
-      <div data-id="submissions_count" data-view="Number" data-title="Submitted Reports"></div>
+   <li data-row="1" data-col="2" data-sizex="1" data-sizey="1">
+      <div data-id="submissions_count" data-view="Number" data-title="Total Submitted Reports"></div>
   </li>
+
+  <li data-row="2" data-col="1" data-sizex="1" data-sizey="1">
+     <div data-id="registrations_this_week" data-view="Number" data-title="Registrations this week"></div>
+ </li>
+
+ <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
+    <div data-id="submissions_this_week" data-view="Number" data-title="Submissions this week"></div>
+</li>
 <!--
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
       <div data-id="welcome" data-view="Text" data-title="Hello" data-text="This is your shiny new dashboard." data-moreinfo="Protip: You can drag the widgets around!"></div>
