Added submissions last week
improved date methods

--- a/dashboards/digideps.erb
+++ b/dashboards/digideps.erb
@@ -1,4 +1,4 @@
-<% content_for :title do %>My super sweet dashboard<% end %>
+<% content_for :title do %>Digideps Analytics Dashboard<% end %>
 <div class="gridster">
   <ul>
     <li data-row="1" data-col="1" data-sizex="1" data-sizey="1">
@@ -15,7 +15,12 @@
 
  <li data-row="2" data-col="2" data-sizex="1" data-sizey="1">
     <div data-id="submissions_this_week" data-view="Number" data-title="Submissions this week"></div>
-</li>
+ </li>
+
+ <li data-row="2" data-col="3" data-sizex="1" data-sizey="1">
+    <div data-id="submissions_last_week" data-view="Number" data-title="Submissions last week"></div>
+ </li>
+
 <!--
     <li data-row="1" data-col="1" data-sizex="2" data-sizey="1">
       <div data-id="welcome" data-view="Text" data-title="Hello" data-text="This is your shiny new dashboard." data-moreinfo="Protip: You can drag the widgets around!"></div>
